--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "elbosc-bloom-filter",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "browser-router": "^0.2.0",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
