--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "backend": "file:backend",
     "client": "file:client",
     "concurrently": "^4.1.1"
   }
