--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "md5": "^2.2.1",
+    "farmhash": "^3.0.0",
+    "hasha": "^5.0.0",
     "word-list": "^3.1.0"
   }
 }
