--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "farmhash": "^3.0.0",
-    "hasha": "^5.0.0",
     "word-list": "^3.1.0"
   }
 }
