--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bit-vector": "^0.1.6",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "farmhash": "^3.0.0",
